--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>╫≈╞╖╝»</title>
+    <title>portfolio</title>
 </head>
 <body>
-    <h1>╬╥╡─╫≈╞╖╝»</h1>
-    <iframe src="简历+作品集_施怡帆.pdf" width="100%" height="600px"></iframe>
+    <h1>yifanshi portfolio</h1>
+    <iframe src="CV_Portfolio_Yifan Shi.pdf" width="100%" height="600px"></iframe>
 </body>
 </html>
